--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -17,6 +17,7 @@
     "@repo/types": "workspace:*",
     "@repo/validators": "workspace:*",
     "@trpc/client": "^11.0.0",
+    "better-auth": "^1.4.17",
     "iconify-icon": "^3.0.2"
   },
   "devDependencies": {
