--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -18,6 +18,7 @@
     "@repo/types": "workspace:*",
     "@repo/validators": "workspace:*",
     "@trpc/client": "^11.0.0",
+    "better-auth": "^1.4.17",
     "expo": "~54.0.31",
     "expo-router": "~4.0.10",
     "expo-status-bar": "~2.1.0",
