--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
+  "prisma": {
+    "schema": "prisma/schema"
+  },
   "exports": {
     ".": "./src/index.ts"
   },
@@ -12,8 +15,7 @@
     "db:migrate:dev": "prisma migrate dev",
     "db:migrate:deploy": "prisma migrate deploy",
     "db:push": "prisma db push",
-    "db:studio": "prisma studio",
-    "db:seed": "bun prisma/seed.ts"
+    "db:studio": "prisma studio"
   },
   "dependencies": {
     "@prisma/client": "^6.19.2",
