--- a/packages/trpc/package.json
+++ b/packages/trpc/package.json
@@ -12,10 +12,12 @@
     "@repo/validators": "workspace:*",
     "@trpc/server": "^11.9.0",
     "bcryptjs": "^3.0.3",
+    "better-auth": "^1.4.17",
     "jsonwebtoken": "^9.0.3",
     "zod": "^4.3.6"
   },
   "devDependencies": {
+    "@better-auth/cli": "^1.4.17",
     "@repo/tsconfig": "workspace:*",
     "@types/bcryptjs": "^3.0.0",
     "@types/jsonwebtoken": "^9.0.10",
