--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -1,1 +1,6 @@
 PORT=3001
+TRUSTED_ORIGINS=http://localhost:3000, http://localhost:3002
+STRIPE_SECRET_KEY=your_stripe_secret_key_here
+STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret_here
+FRONTEND_URL=http://localhost:3000
+DISCORD_WEBHOOK_URL=your_discord_webhook_url_here
