--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -17,7 +17,9 @@
     "@repo/types": "workspace:*",
     "@repo/validators": "workspace:*",
     "@trpc/client": "^11.0.0",
+    "@types/canvas-confetti": "^1.9.0",
     "better-auth": "^1.4.17",
+    "canvas-confetti": "^1.9.4",
     "iconify-icon": "^3.0.2"
   },
   "devDependencies": {
