--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -19,18 +19,18 @@
     "@repo/validators": "workspace:*",
     "@trpc/client": "^11.0.0",
     "better-auth": "^1.4.17",
-    "expo": "~54.0.31",
-    "expo-router": "~4.0.10",
-    "expo-status-bar": "~2.1.0",
-    "react": "18.3.1",
-    "react-native": "0.79.3",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.7.0"
+    "expo": "~54.0.33",
+    "expo-router": "~6.0.23",
+    "expo-status-bar": "~3.0.9",
+    "react": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@repo/tsconfig": "workspace:*",
-    "@types/react": "~18.3.19",
+    "@types/react": "~19.1.10",
     "typescript": "^5.7.3"
   }
 }
