--- a/packages/trpc/package.json
+++ b/packages/trpc/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^3.0.3",
     "better-auth": "^1.4.17",
     "jsonwebtoken": "^9.0.3",
+    "stripe": "^20.3.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
