--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -1,6 +1,14 @@
 PORT=3001
-TRUSTED_ORIGINS=http://localhost:3000, http://localhost:3002
-STRIPE_SECRET_KEY=your_stripe_secret_key_here
-STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret_here
+TRUSTED_ORIGINS=http://localhost:3000,http://localhost:3002
 FRONTEND_URL=http://localhost:3000
+
+STRIPE_SECRET_KEY=sk_test_...
+STRIPE_WEBHOOK_SECRET=whsec_...
+
+MINIO_ROOT_USER=minioadmin
+MINIO_ROOT_PASSWORD=minioadminpassword
+MINIO_BUCKET_NAME=my-app-bucket
+MINIO_ENDPOINT=http://127.0.0.1:9000
+MINIO_PUBLIC_URL=http://127.0.0.1:9000
+
 DISCORD_WEBHOOK_URL=your_discord_webhook_url_here
