🐛 Implemented BetterAuth Session checking in protectedProcedures

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -12,3 +12,5 @@ MINIO_ENDPOINT=http://127.0.0.1:9000
 MINIO_PUBLIC_URL=http://127.0.0.1:9000
 
 DISCORD_WEBHOOK_URL=your_discord_webhook_url_here
+
+BETTER_AUTH_SECRET_KEY=your_better_auth_secret_key_here
