📦 Shared package for trcp client store clients, 📦 Env package

--- a/apps/mobile/.env.example
+++ b/apps/mobile/.env.example
@@ -1,1 +1,3 @@
-EXPO_PUBLIC_API_URL=http://localhost:3001/trpc
+EXPO_PUBLIC_API_URL=http://localhost:3001
+STRIPE_PRICE_ID=pr_jfkldsjflkdsjklfjsdkl
+NODE_ENV=development
