--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -1,5 +1,5 @@
 PORT=3001
-TRUSTED_ORIGINS=http://localhost:3000,http://localhost:3002
+TRUSTED_ORIGINS=http://localhost:3000,http://localhost:3001, http://localhost:3002
 FRONTEND_URL=http://localhost:3000
 
 STRIPE_SECRET_KEY=sk_test_...
@@ -13,4 +13,4 @@ MINIO_PUBLIC_URL=http://127.0.0.1:9000
 
 DISCORD_WEBHOOK_URL=your_discord_webhook_url_here
 
-BETTER_AUTH_SECRET_KEY=your_better_auth_secret_key_here
+BETTER_AUTH_SECRET=your_better_auth_secret_key_here
