--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -7,7 +7,8 @@
     "dev": "bun run --watch src/index.ts",
     "build": "bun build src/index.ts --outdir dist --target bun --external=* --minify",
     "start": "bun run dist/index.js",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "check-env": "bun ./src/lib/env.ts"
   },
   "dependencies": {
     "@hono/trpc-server": "^0.4.2",
