--- a/apps/backoffice/package.json
+++ b/apps/backoffice/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "check-env": "bun ./src/lib/env.ts"
   },
   "dependencies": {
     "@fontsource-variable/inter": "^5.2.8",
@@ -16,13 +17,13 @@
     "@repo/trpc": "workspace:*",
     "@repo/types": "workspace:*",
     "@repo/validators": "workspace:*",
+    "@sveltejs/adapter-node": "^5.5.2",
     "@trpc/client": "^11.0.0",
     "better-auth": "^1.4.17",
     "iconify-icon": "^3.0.2"
   },
   "devDependencies": {
     "@repo/tsconfig": "workspace:*",
-    "@sveltejs/adapter-auto": "^3.3.1",
     "@sveltejs/kit": "^2.50.0",
     "@sveltejs/vite-plugin-svelte": "^5.1.1",
     "@tailwindcss/postcss": "^4.1.18",
