--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -10,7 +10,8 @@
     "web": "expo start --web",
     "build:android": "eas build --platform android",
     "build:ios": "eas build --platform ios",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "check-env": "bun ./lib/env.ts"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
@@ -21,6 +22,7 @@
     "better-auth": "^1.4.17",
     "expo": "~54.0.33",
     "expo-router": "~6.0.23",
+    "expo-secure-store": "^15.0.8",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5",
