--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -10,12 +10,12 @@
     ".": "./src/index.ts"
   },
   "scripts": {
-    "build": "prisma generate",
     "db:generate": "prisma generate",
     "db:migrate:dev": "prisma migrate dev",
     "db:migrate:deploy": "prisma migrate deploy",
     "db:push": "prisma db push",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@prisma/client": "^6.19.2",
