--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,19 @@
   "singleQuote": true,
   "trailingComma": "es5",
   "printWidth": 100,
-  "semi": true
+  "plugins": ["prettier-plugin-svelte", "prettier-plugin-prisma"],
+  "overrides": [
+    {
+      "files": "*.svelte",
+      "options": {
+        "parser": "svelte"
+      }
+    },
+    {
+      "files": "*.prisma",
+      "options": {
+        "parser": "prisma-parse"
+      }
+    }
+  ]
 }
