--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "prettier": "^3.8.1",
+    "prettier-plugin-prisma": "^5.0.0",
+    "prettier-plugin-svelte": "^3.4.1",
     "turbo": "^2.8.1",
     "typescript": "^5.9.3"
   },
