📦 Fixed @repo/ui imports

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -36,4 +36,4 @@ jobs:
         run: bun run build --filter=@repo/backend
 
       - name: Run type check
-        run: cd apps/backend && bun run type-check
+        run: cd apps/backend && bun run typecheck
