--- a/.github/workflows/backoffice.yml
+++ b/.github/workflows/backoffice.yml
@@ -36,4 +36,4 @@ jobs:
         run: bun run build --filter=@repo/backoffice
 
       - name: Run type check
-        run: cd apps/backoffice && bun run check
+        run: cd apps/backoffice && bun run typecheck
