--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Lint
         run: bun run lint
 
-  type-check:
+  typecheck:
     name: Type Check
     runs-on: ubuntu-latest
     steps:
@@ -43,12 +43,12 @@ jobs:
         run: cd packages/database && bun run db:generate
 
       - name: Type check
-        run: bun run type-check
+        run: bun run typecheck
 
   build:
     name: Build
     runs-on: ubuntu-latest
-    needs: [lint, type-check]
+    needs: [lint, typecheck]
     strategy:
       matrix:
         app: [backend, frontend, backoffice]
