--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -7,7 +7,7 @@
     "dev": "bun run --watch src/index.ts",
     "build": "bun build src/index.ts --outdir dist --target bun --external=* --minify",
     "start": "bun run dist/index.js",
-    "type-check": "tsc --noEmit",
+    "typecheck": "tsc --noEmit",
     "check-env": "bun ./src/lib/env.ts",
     "lint": "eslint src --max-warnings 0"
   },
