--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -10,7 +10,7 @@
     "web": "expo start --web",
     "build:android": "eas build --platform android",
     "build:ios": "eas build --platform ios",
-    "type-check": "tsc --noEmit",
+    "typecheck": "tsc --noEmit",
     "check-env": "bun ./lib/env.ts",
     "lint": "eslint . --max-warnings 0"
   },
