--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -14,7 +14,7 @@
     "db:push": "prisma db push",
     "db:seed": "prisma db seed",
     "db:studio": "prisma studio",
-    "type-check": "tsc --noEmit"
+    "typecheck": "tsc --noEmit"
   },
   "prisma": {
     "seed": "bun prisma/seed.ts"
@@ -26,7 +26,8 @@
     "@types/pg": "^8.16.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
-    "pg": "^8.18.0"
+    "pg": "^8.18.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@faker-js/faker": "^10.2.0",
