--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -13,7 +13,7 @@
     }
   },
   "scripts": {
-    "type-check": "tsc --noEmit"
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "pino": "^9.6.0"
