--- a/packages/storage-client/package.json
+++ b/packages/storage-client/package.json
@@ -8,8 +8,12 @@
   "exports": {
     ".": "./src/index.ts"
   },
+  "scripts": {
+    "typecheck": "tsc --noEmit"
+  },
   "dependencies": {},
   "devDependencies": {
-    "@repo/tsconfig": "workspace:*"
+    "@repo/tsconfig": "workspace:*",
+    "typescript": "^5.9.3"
   }
 }
