--- a/packages/storage/package.json
+++ b/packages/storage/package.json
@@ -6,6 +6,13 @@
   "exports": {
     ".": "./src/index.ts"
   },
+  "scripts": {
+    "typecheck": "tsc --noEmit"
+  },
+  "devDependencies": {
+    "@repo/tsconfig": "workspace:*",
+    "typescript": "^5.9.3"
+  },
   "dependencies": {
     "@repo/logger": "workspace:*",
     "bun-types": "^1.3.8"
