--- a/packages/trpc/package.json
+++ b/packages/trpc/package.json
@@ -7,6 +7,9 @@
     ".": "./src/index.ts",
     "./client": "./src/client.ts"
   },
+  "scripts": {
+    "typecheck": "tsc --noEmit"
+  },
   "dependencies": {
     "@repo/admin": "workspace:*",
     "@repo/database": "workspace:*",
@@ -17,7 +20,7 @@
     "stripe": "^20.3.0",
     "trpc-redis-cache": "^0.4.0",
     "trpc-to-openapi": "^3.1.0",
-    "zod": "^3.24.0",
+    "zod": "^3.24.1",
     "zod-openapi": "^5.4.6"
   },
   "devDependencies": {
