--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -27,6 +27,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "iconify-icon": "^3.0.2",
+    "leaflet": "^1.9.4",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
