--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -1,28 +1,17 @@
 # PostgreSQL Database URL
 # Run `bun run dev:db` to start and configure a local PostgreSQL instance
-DATABASE_URL=postgresql://fangafunk@localhost:5432/monorepo_dev
+DATABASE_URL=postgresql://fangafunk@localhost:5432/myapp
 
 PORT=3001
 TRUSTED_ORIGINS=http://localhost:3000,http://localhost:3001,http://localhost:3002
 FRONTEND_URL=http://localhost:3000
 
-STRIPE_SECRET_KEY=sk_test_...
-STRIPE_WEBHOOK_SECRET=whsec_...
-
-MINIO_ROOT_USER=minioadmin
-MINIO_ROOT_PASSWORD=minioadminpassword
-MINIO_BUCKET_NAME=my-app-bucket
-MINIO_ENDPOINT=http://127.0.0.1:9000
-MINIO_PUBLIC_URL=http://127.0.0.1:9000
-
-DISCORD_WEBHOOK_URL=your_discord_webhook_url_here
-
 ENCRYPTION_SECRET=fjdsklfjsdlkjfosdjfklj34kkjkfsd09980f
 
-# Redis Configuration (for job queues)
+# Redis Configuration (required for job queues)
 REDIS_HOST=localhost
 REDIS_PORT=6379
-# REDIS_PASSWORD=your_redis_password_here
+REDIS_PASSWORD=
 REDIS_DB=0
 
 # Logging (optional)
