🔧 Production readiness: logging, Docker, healthcheck fixes
- Replace all console.log/warn/error with structured logger calls in backend (websocket.ts, index.ts, register-workers.ts)
- Fix CommonJS require() in index.ts by importing clients directly from websocket module
- Fix Railway healthcheck path from / to /health/ready
- Fix backend Dockerfile: use --frozen-lockfile without --production so devDeps are available at build time
- Fix docker-compose frontend port mismatch: align EXPOSE 3000 with PORT/mapping (was 5173)
- Update FRONTEND_URL and TRUSTED_ORIGINS in docker-compose to match port 3000
- Add hunt type badge and full filter display on hunt details page

--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -14,7 +14,7 @@ COPY packages/logger/package.json ./packages/logger/
 COPY packages/trpc/package.json ./packages/trpc/
 COPY packages/types/package.json ./packages/types/
 
-RUN bun install --frozen-lockfile --production
+RUN bun install --frozen-lockfile
 
 FROM base AS builder
 WORKDIR /app
