--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -18,7 +18,7 @@ jobs:
       packages: write
     strategy:
       matrix:
-        app: [backend, frontend, backoffice]
+        app: [backend, frontend]
     steps:
       - uses: actions/checkout@v4
 
