--- a/apps/frontend/Dockerfile
+++ b/apps/frontend/Dockerfile
@@ -6,8 +6,11 @@ WORKDIR /app
 COPY package.json bun.lock ./
 COPY apps/frontend/package.json ./apps/frontend/
 COPY packages/auth-shared/package.json ./packages/auth-shared/
+COPY packages/database/package.json ./packages/database/
 COPY packages/env/package.json ./packages/env/
+COPY packages/eslint-config/package.json ./packages/eslint-config/
 COPY packages/logger/package.json ./packages/logger/
+COPY packages/trpc/package.json ./packages/trpc/
 COPY packages/trpc-client/package.json ./packages/trpc-client/
 COPY packages/types/package.json ./packages/types/
 COPY packages/ui/package.json ./packages/ui/
