🐛 Fix frontend Docker build: rename build arg and fix env fallback
- Rename PUBLIC_BACKEND_URL → VITE_API_URL in Dockerfile so Vite picks it up correctly
- Fix env.ts to fall back to process.env when import.meta.env is unavailable (check-env step in Docker)

--- a/apps/frontend/Dockerfile
+++ b/apps/frontend/Dockerfile
@@ -25,8 +25,8 @@ WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 
-ARG PUBLIC_BACKEND_URL
-ENV PUBLIC_BACKEND_URL=$PUBLIC_BACKEND_URL
+ARG VITE_API_URL
+ENV VITE_API_URL=$VITE_API_URL
 
 RUN bun run build --filter=@repo/frontend
 
