🐛 Add svelte-kit sync and NODE_ENV to Docker build
- Run svelte-kit sync before building to generate .svelte-kit files
- Set NODE_ENV=production during build phase
- This should fix undefined error in Railway deployment

--- a/apps/frontend/Dockerfile
+++ b/apps/frontend/Dockerfile
@@ -29,7 +29,9 @@ COPY . .
 
 ARG VITE_API_URL
 ENV VITE_API_URL=$VITE_API_URL
+ENV NODE_ENV=production
 
+RUN cd apps/frontend && bunx svelte-kit sync
 RUN bun run build --filter=@repo/frontend
 
 FROM base AS runner
