🐛 Fix Prisma schema path in Docker
Added schema path to prisma.config.ts and all package.json scripts.

Changes:
- prisma.config.ts: Added schema: './prisma/schema'
- package.json scripts: Added --schema=./prisma/schema flag to all commands

This fixes the error in Docker where Prisma couldn't find the schema files.
Docker container will now successfully run prisma:push on startup.

--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -10,9 +10,9 @@
   "scripts": {
     "typecheck": "tsc --noEmit",
     "prisma:generate": "prisma generate --schema=./prisma/schema",
-    "prisma:migrate": "prisma migrate dev",
-    "prisma:push": "prisma db push",
-    "prisma:studio": "prisma studio"
+    "prisma:migrate": "prisma migrate dev --schema=./prisma/schema",
+    "prisma:push": "prisma db push --schema=./prisma/schema",
+    "prisma:studio": "prisma studio --schema=./prisma/schema"
   },
   "dependencies": {
     "@prisma/client": "^7.4.1",
