🐛 Fix DATABASE_URL in Docker CMD for Prisma push
The DATABASE_URL environment variable wasn't being passed to the prisma:push command.

Changes:
- Use explicit DATABASE_URL environment variable in CMD
- Add --accept-data-loss flag to avoid interactive prompts
- Use array syntax for CMD to properly handle env vars

This ensures Prisma can connect to the database when pushing the schema on container startup.

--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -54,4 +54,4 @@ USER backend
 
 EXPOSE 3001
 
-CMD sh -c "cd packages/database && bun run prisma:push && cd ../.. && bun run apps/backend/src/index.ts"
+CMD ["sh", "-c", "cd packages/database && DATABASE_URL=\"${DATABASE_URL}\" bun run prisma:push --accept-data-loss && cd ../.. && bun run apps/backend/src/index.ts"]
