🔧 Fix Prisma 7 Docker build and module exports
- Make DATABASE_URL optional in prisma.config.ts for Docker builds
- Add fallback placeholder URL for prisma generate without DATABASE_URL
- Export ./prisma path in @repo/database package.json
- Fixes "Cannot find module @repo/database/prisma" error

--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "exports": {
     ".": "./src/index.ts",
+    "./prisma": "./src/prisma.ts",
     "./utils/prisma-helpers": "./src/utils/prisma-helpers.ts"
   },
   "scripts": {
