🔧 Fix Prisma 7.x configuration and Docker build
- Add prisma.config.ts in project root with correct schema path
- Configure binary engine type to fix client initialization
- Update Dockerfile to copy prisma.config.ts to container
- Remove redundant prisma.config.ts from packages/database
- Add debian-openssl-3.0.x binary target for Docker compatibility

--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -30,6 +30,7 @@ WORKDIR /app
 
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
+COPY prisma.config.ts ./
 
 ARG DATABASE_URL
 ENV DATABASE_URL=$DATABASE_URL
@@ -49,6 +50,7 @@ COPY --from=builder --chown=backend:nodejs /app/packages ./packages
 COPY --from=builder --chown=backend:nodejs /app/node_modules ./node_modules
 COPY --from=builder --chown=backend:nodejs /app/package.json ./
 COPY --from=builder --chown=backend:nodejs /app/turbo.json ./
+COPY --from=builder --chown=backend:nodejs /app/prisma.config.ts ./
 
 USER backend
 
