🔧 Add Prisma 7.x adapter support for PostgreSQL
- Install @prisma/adapter-pg and pg packages for database connection
- Configure PrismaClient with PostgreSQL adapter
- Update prisma.config.ts to use env() helper for DATABASE_URL
- Modify package.json scripts to run from project root
- Simplify Dockerfile commands using --cwd flag
- Add @types/pg for TypeScript support

This completes the Prisma 7.x migration by properly configuring
the database adapter pattern required by the new architecture.

--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -35,7 +35,7 @@ COPY prisma.config.ts ./
 ARG DATABASE_URL
 ENV DATABASE_URL=$DATABASE_URL
 
-RUN cd packages/database && bun run prisma:generate
+RUN bun run --cwd packages/database prisma:generate
 
 FROM base AS runner
 WORKDIR /app
@@ -56,4 +56,4 @@ USER backend
 
 EXPOSE 3001
 
-CMD ["sh", "-c", "cd packages/database && DATABASE_URL=\"${DATABASE_URL}\" bun run prisma:push --accept-data-loss && cd ../.. && bun run apps/backend/src/index.ts"]
+CMD ["sh", "-c", "bun run --cwd packages/database prisma:push --accept-data-loss && bun run apps/backend/src/index.ts"]
