--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -15,7 +15,9 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "svelte": "^5.49.1"
+    "clsx": "^2.1.1",
+    "svelte": "^5.49.1",
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
