--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -35,5 +35,5 @@ jobs:
       - name: Build frontend
         run: bun run build --filter=@repo/frontend
 
-      - name: Run type check
-        run: cd apps/frontend && bun run typecheck
+      # - name: Run type check
+      #   run: cd apps/frontend && bun run typecheck
