--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,6 +4,7 @@ services:
   postgres:
     image: postgres:16-alpine
     container_name: glouton-dev-postgres
+    shm_size: 256mb
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
